--- a/css/pond.css
+++ b/css/pond.css
@@ -4,14 +4,22 @@
 
 #pond {
 	margin-top: 10px;
+	height: calc(100% - 55px);
 }
 
 #pond:focus {
 	outline: none;
 }
 
-.col {
+.pond-row {
+	margin: 0px;
+	height: calc(20%);
+}
+
+.pond-col {
 	width: 64px;
+	max-width: calc(20% - 10px);
+	max-height: calc(100% - 10px);
 	height: 64px;
 	margin: 5px;
 	display: inline-block;
@@ -19,29 +27,29 @@
 	transition: background-color 1.5s;
 }
 
-.col:hover {
+.pond-col:hover {
 	background-color: #c0bebe;
 }
 
-.col.turtleCell {
+.pond-col.turtleCell {
 	position: relative;
 	overflow:hidden;
 	background-color: #acd373;
 }
 
-.col.turtleCell:before {
+.pond-col.turtleCell:before {
 	content: "";
 	position:absolute;
-	width: 100%;
-	height: 100%;
-	
+	width: calc(100% - 10px);
+	height: calc(100% - 10px);
+	margin: 5px;
 	background: url(images/turtle.svg) no-repeat;
 	background-position: center;
-	background-size: 60%;
+	background-size: contain;
 	transition: transform 1s;
 }
 
-.col.turtleCell.east:before {
+.pond-col.turtleCell.east:before {
 	-webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
@@ -49,7 +57,7 @@
     transform: rotate(90deg);
 }
 
-.col.turtleCell.west:before {
+.pond-col.turtleCell.west:before {
 	-webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
     -ms-transform: rotate(270deg);
@@ -57,7 +65,7 @@
     transform: rotate(270deg);
 }
 
-.col.turtleCell.south:before {
+.pond-col.turtleCell.south:before {
 	-webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
